// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxAccordionHeader customize 1`] = `
<div>
  <summary
    class="bazinga"
  >
    <span
      class="accordion-title"
    >
      Test
    </span>
  </summary>
</div>
`;

exports[`loads and displays CxAccordionHeader component 1`] = `
<div>
  <summary>
    <span
      class="accordion-title"
    >
      Test
    </span>
  </summary>
</div>
`;
